adicionando documentações de mais algumas rotas
