# rotas/api/solicitacoesColeta.js
@@ -1,33 +1,9 @@
 // Importa as bibliotecas necessárias
 const express = require("express");
-const router = express.Router();
 const SolicitacaoColeta = require("../../modelos/SolicitacaoColeta");
 
-// Rota POST para criar uma nova solicitação de coleta
-router.post("/", async (req, res) => {
-  console.log("Rota /solicitacoesColeta chamada");
-  // Desestruturação para obter os dados do corpo da requisição
-  const { usuario, endereco, descricao } = req.body;
-
-  try {
-    // Cria um novo objeto de solicitação de coleta
-    const novaSolicitacao = new SolicitacaoColeta({
-      usuario,
-      endereco,
-      descricao,
-    });
-
-    // Salva a solicitação de coleta no banco de dados
-    const solicitacao = await novaSolicitacao.save();
-
-    // Retorna a solicitação de coleta criada
-    res.json(solicitacao);
-  } catch (err) {
-    // Retorna uma resposta de erro caso algo dê errado
-    console.error(err.message);
-    res.status(500).send("Erro no servidor");
-  }
-});
+// Criação do objeto roteador do Express
+const router = express.Router();
 
 router.get("/", async (req, res) => {
   try {
@@ -36,6 +12,31 @@ router.get("/", async (req, res) => {
   } catch (err) {
     console.error(err.message);
     res.status(500).send("Erro no servidor");
+  }
+});
+
+// Rota POST para criar uma nova solicitação de coleta
+router.post("/", async (req, res) => {
+  // Desestruturação para obter os dados do corpo da requisição
+  const { idUsuario, endereco, descricao } = req.body;
+
+  try {
+    // Cria um novo objeto de solicitação de coleta
+    const novaSolicitacao = new SolicitacaoColeta({
+      idUsuario,
+      endereco,
+      descricao,
+    });
+
+    // Salva a solicitação de coleta no banco de dados
+    const solicitacao = await novaSolicitacao.save();
+
+    // Retorna a solicitação de coleta criada
+    return res.status(201).json();
+  } catch (err) {
+    // Retorna uma resposta de erro caso algo dê errado
+    console.error(err.message);
+    return res.status(500).json({"error": 'Erro no servidor'});
   }
 });
 
