# rotas/api/usuarios.js
@@ -1,8 +1,10 @@
 // Importa as bibliotecas necessárias
 const express = require("express");
 const bcrypt = require("bcryptjs");
+const jwt = require("jsonwebtoken");
 const Usuario = require("../../modelos/Usuario");
 
+// Criação do objeto roteador do Express
 const router = express.Router();
 
 // Rota GET para obter todos os usuários
@@ -11,11 +13,11 @@ router.get("/", async (req, res) => {
     // Busca todos os usuários no banco de dados
     const usuarios = await Usuario.find();
     // Retorna os usuários encontrados
-    res.status(200).json(usuarios);
+    return res.status(200).json(usuarios);
   } catch (err) {
     // Retorna uma resposta de erro caso algo dê errado
     console.error(err.message);
-    res.status(500).json({"error": 'Erro no servidor'});
+    return res.status(500).json({"error": 'Erro no servidor'});
   }
 });
 
@@ -28,11 +30,11 @@ router.get("/id", async (req, res) => {
     // Busca o usuário correspondente ao ID
     usuario = await Usuario.find({"_id": id})
     // Retorna os usuários encontrados
-    res.status(200).json(usuario)
+    return res.status(200).json(usuario)
   } catch (err) {
     // Retorna uma resposta de erro caso algo dê errado
     console.error(err.message);
-    res.status(500).json({"error": 'Erro no servidor'});
+    return res.status(500).json({"error": 'Erro no servidor'});
   }
 });
 
@@ -45,11 +47,11 @@ router.get("/tipoUsuario", async (req, res) => {
     // Busca todos os usuários de um tipo específico
     usuarios = await Usuario.find({ tipoUsuario });
     // Retorna os usuários encontrados
-    res.status(200).json(usuarios);
+    return res.status(200).json(usuarios);
   } catch (err) {
     // Retorna uma resposta de erro caso algo dê errado
     console.error(err.message);
-    res.status(500).json({"error": 'Erro no servidor'});
+    return res.status(500).json({"error": 'Erro no servidor'});
   }
 });
 
@@ -63,7 +65,7 @@ router.post("/", async (req, res) => {
     let usuario = await Usuario.findOne({ email });
     // Retorna um erro se o usuário já existir
     if (usuario) {
-      return res.status(400).json({ erros: [{ msg: "Usuário já existe" }] });
+      return res.status(400).json({"error": 'Usuário já existe'});
     }
 
     // Cria um novo objeto de usuário
@@ -83,7 +85,52 @@ router.post("/", async (req, res) => {
     await usuario.save();
 
     // Retorna uma resposta de sucesso
-    res.status(201).json();
+    return res.status(201).json();
+  } catch (err) {
+    // Retorna uma resposta de erro caso algo dê errado
+    console.error(err.message);
+    return res.status(500).json({"error": 'Erro no servidor'});
+  }
+});
+
+router.post("/login", async (req, res) => {
+  // Pega os param email e senha
+  const { email, senha } = req.body;
+
+  try {
+    // Busca o usuario que corresponde ao email
+    let usuario = await Usuario.findOne({ email });
+    //  Retorna erro se o usuário não for encontrado
+    if (!usuario) {
+      return res.status(400).json({"error": "Credenciais inválidas"});
+    }
+
+    // Compara a senha fornecida com a salva no banco
+    const isMatch = await bcrypt.compare(senha, usuario.senha);
+    // Retorna erro se as senhas não forem iguais
+    if (!isMatch) {
+      return res.status(400).json({"error": "Credenciais inválidas"});
+    }
+
+    // Define o payload do token
+    const payload = {
+      user: {
+        id: usuario.id,
+        tipoUsuario: usuario.tipoUsuario,
+        solicitacoesAtribuidas: usuario.solicitacoesAtribuidas,
+      },
+    };
+
+    // Gera o token
+    token = jwt.sign(payload, process.env.SECRET, { expiresIn: "1h" })
+    
+    // Retorna o token 
+    return res.status(200).json({
+      "token": token,
+      "idUsuario": usuario.id,
+      "tipoUsuario": usuario.tipoUsuario,
+      "solicitacoesAtribuidas": usuario.solicitacoesAtribuidas,
+    });
   } catch (err) {
     // Retorna uma resposta de erro caso algo dê errado
     console.error(err.message);
